re-create the IntCode interpreter for smaller programs, it might be faster and less memory intensive